fixed image gap

--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ footer {
 .first-img {
     width: 500px;
     height: 250px;
+    background-image: cover;
 }
 /* ========second background styling======== */
 .second-background {
